cmake_minimum_required(VERSION 3.22)
project(test_for_y)
enable_testing()
find_package(GTest REQUIRED)
add_subdirectory(y)
include_directories(. test)

SET(TESTING_SRC )
add_executable(test_for_y main.cc ${TESTING_SRC})
target_link_libraries(test_for_y PRIVATE gtest pthread)
add_test(test_for_y ${CMAKE_BINARY_DIR}/test_for_y)